# loop

./: .gitignore  AGENTS.md  AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  init.sh  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/skills/: abandon-feature  arm-gate  authoring-work-units  block-feature  derive-verification  draft-feature  feature-conversion  fix-bug  gate-status  learnings-curate  learnings-suggest  pick-feature  roadmap-add  roadmap-archive  scaffold-upgrade  unblock-wu  verification  wrap-feature
.claude/skills/roadmap-archive/: SKILL.md
.githooks/: pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  methodology_question.md
.github/workflows/: ci.yml  leak-scan-content.yml  release.yml
.specfuse/: LEARNINGS.md  README.md  roadmap-archive.md  roadmap.md  roadmap.template.md  verification.yml  verification.yml.example
.specfuse/features/FEAT-2026-0001-health-endpoint/: GATE-01.md  GATE-02.md  PLAN.md  WU-01-health-endpoint.md  WU-02-endpoint-tests.md  WU-90-gate-1-retrospective.md  WU-91-gate-1-lessons.md  WU-92-gate-1-docs.md  WU-93-gate-1-plan-next.md
.specfuse/features/FEAT-2026-0002-driver-test-coverage/: GATE-01.md  PLAN.md  RETROSPECTIVE.md  WU-01-loop-orchestration-coverage.md  WU-02-validate-event-coverage.md  WU-03-lint-plan-error-arms.md  WU-04-miniyaml-error-arms.md  WU-05-floor-flip.md  WU-90-close.md  events.jsonl
.specfuse/features/FEAT-2026-0003-github-feature-pick/: GATE-01.md  GATE-02-REVIEW.md  GATE-02.md  GATE-03-REVIEW.md  GATE-03.md  GATE-04-REVIEW.md  GATE-04.md  PLAN.md  RETROSPECTIVE.md  SMOKE-INIT-2026-0001-F06.md  SMOKE-example-feature.md  WU-01-correlation-id-grammar.md  WU-02-gh-feature-discovery.md  WU-03-adopt-script.md  WU-04-adopt-skill.md  WU-05-backend-lifecycle-hooks.md  WU-06-github-backend.md  WU-07-smoke-end-to-end.md  WU-08-lint-atx-headings.md  WU-100-gate-3-docs.md  WU-101-gate-3-plan-next.md  WU-102-gate-4-retrospective.md  WU-103-gate-4-lessons.md  WU-104-gate-4-docs.md  WU-105-gate-4-plan-next.md  WU-90-gate-1-retrospective.md  WU-91-gate-1-lessons.md  WU-92-gate-1-docs.md  WU-93-gate-1-plan-next.md  WU-94-gate-2-retrospective.md  WU-95-gate-2-lessons.md  WU-96-gate-2-docs.md  WU-97-gate-2-plan-next.md  WU-98-gate-3-retrospective.md  WU-99-gate-3-lessons.md  events.jsonl
.specfuse/features/FEAT-2026-0004-driver-lock/: GATE-01.md  PLAN.md  RETROSPECTIVE.md  WU-01-driver-lock.md  WU-90-gate-1-retrospective.md  WU-91-gate-1-lessons.md  WU-92-gate-1-docs.md  WU-93-gate-1-plan-next.md  events.jsonl
.specfuse/features/FEAT-2026-0005-combined-close/: GATE-01.md  PLAN.md  RETROSPECTIVE.md  WU-01-combined-close.md  WU-90-gate-1-retrospective.md  WU-91-gate-1-lessons.md  WU-92-gate-1-docs.md  WU-93-gate-1-plan-next.md  events.jsonl
.specfuse/features/FEAT-2026-0006-wu-duration/: GATE-01.md  PLAN.md  RETROSPECTIVE.md  WU-01-duration-tracking.md  WU-90-close.md  events.jsonl
.specfuse/features/FEAT-2026-0007-dispatch-cost-controls/: GATE-01.md  GATE-02-REVIEW.md  GATE-02.md  PLAN.md  RETROSPECTIVE.md  WU-01-model-family-alias.md  WU-02-effort-field.md  (+16 more)
.specfuse/hooks/: pre-commit
.specfuse/rules/: correlation-ids.md  never-touch.md  planning-discipline.md  result-contract.md  security-boundaries.md  verification-discipline.md
.specfuse/schemas/: event.schema.json
.specfuse/scripts/: _miniyaml.py  adopt_feature.py  gate_eval.py  gh_backend.py  gh_features.py  leak_denylist.hashes  leak_scan.py  leak_scan_content.py  learnings_query.py  lint_plan.py  loop.py  upgrade_merge_gate.py  validate-event.py
.specfuse/skills/: roadmap-add  roadmap-archive
.specfuse/templates/: GATE.template.md  PLAN.template.md  WU.template.md
docs/: README.md  architecture-addendum-gates-and-iterative-planning.md  getting-started.md  handoff-github-feature-pick.md  methodology.md  ralph-lineage.md  skills.md  wu-draft-loop-concurrency-lock.md
docs/adr/: 0001-record-architecture-decisions.md  0002-ratify-roadmap-feature-scoring-model.md  README.md
docs/concepts/: architecture-addendum-gates-and-iterative-planning.md
docs/dev/: handoff-github-feature-pick.md  leak-scan-content-action.md
plugins/specfuse/: README.md
scripts/: bump_version.py  check-linux-race.sh  install-hooks.sh  setup.sh  smoke-test.sh  sync-scaffold.sh  sync-skills.sh
specfuse/loop/: __init__.py  _filelock.py  _miniyaml.py  adopt_feature.py  gate_eval.py  gh_backend.py  lint_plan.py  loop.py  scaffold.py  validate_event.py
tests/: __init__.py  _loop_loader.py  _workspace.py  hookspath_conflict.bats  init_leak_exclusion.bats  init_sh_shim.bats  init_skills_idempotent.bats  leak_scan_hook.bats  sync_scaffold.bats  test_adopt_feature.py  test_arm_gate_edits_uncommitted.py  test_attempt_outcome_emission.py  test_autoclose_deferral_visibility.py  test_autosync.py  test_autosync_consent.py  test_autosync_firstrun.py  test_autosync_plugin.py  test_backend.py  test_bash_routing.py  test_bookkeeping_commit_crash_run.py  test_bookkeeping_commit_hook_crash.py  test_bookkeeping_no_verify.py  test_claude_resolution.py  test_close_wu_self_reference.py  test_closing_deliverable_guard.py  test_console_encoding.py  test_cost_tracking.py  test_degraded_oracle.py  test_deliverable_presence_gate.py  test_doctor.py  test_driver_integration.py  test_driver_lock.py  test_duration_tracking.py  test_empty_files_escalation.py  test_ensure_feature_branch.py  test_ensure_feature_branch_base.py  test_events_redaction.py  test_extra_gates.py  test_filelock_portable.py  test_force_full_close.py  (+89 more)
(+440 files in other folders)
