[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "specfuse-loop"
version = "0.2.0"
description = "Local-first executor for the Specfuse Plan + Work Unit gate-cycle methodology."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Specfuse contributors" },
]
keywords = ["specfuse", "agents", "planning", "ralph", "gate-cycle"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
]
# The loop driver and linter have no runtime dependencies — YAML parsing is
# done by .specfuse/scripts/_miniyaml.py against the documented subset, using
# only the Python 3 standard library.
dependencies = []

# Dev tooling for this repo's own `code` gates (see .specfuse/verification.yml
# and scripts/smoke-test.sh). PyYAML is dev-only: the equivalence tests for
# _miniyaml compare its output against yaml.safe_load on every real file.
# ruff/bandit/coverage are for the reference implementation's own gates.
[project.optional-dependencies]
dev = [
  "PyYAML>=6.0",
  "ruff>=0.6",
  "bandit>=1.7",
  "coverage>=7.0",
  "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/specfuse/loop"
Source = "https://github.com/specfuse/loop"

# Minimal ruff config — keep defaults (E + F). Target the loop's actual
# minimum Python (matches pyproject's `requires-python`).
[tool.ruff]
target-version = "py310"

# The loop driver and linter are invoked as scripts from a target repo's
# .specfuse/scripts/ directory rather than installed as console entry points.
# This file exists to declare the runtime dependency (PyYAML) cleanly.
[tool.setuptools]
py-modules = []
